--- a/old/styles.css
+++ b/old/styles.css
@@ -1,84 +1,13 @@
-html {
-  background-color:lightgray;
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+table {
   max-width: 600px;
-  min-width: 350px;
-  margin: 0 auto 0 auto;
-  scroll-behavior: smooth;
-  font-size: 16px;
 }
 
-body {
-  background-color:floralwhite;
-  margin: 0;
-}
-
-.next {
-  width: 0; 
-  height: 0; 
-  border-left: 30px solid transparent;
-  border-right: 30px solid transparent;
-  border-top: 30px solid lightgray;
-  position: absolute;
-  bottom: 2%;
-  left: 45%
-}
-
-.previous {
-  width: 0; 
-  height: 0; 
-  border-left: 30px solid transparent;
-  border-right: 30px solid transparent;
-  border-bottom: 30px solid lightgray;
-  position: absolute;
-  top: 2%;
-  margin: 0 auto;
-  left: 45%;
-}
-
-.page {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  position: relative;
-}
-
-h1, h2, h3 {
-  margin-left: 5%;
-  margin-right: 5%;
-  padding: 0;
-}
-
-h1 {
-  text-align: center;
-  font-size: 2.1rem;
-  font-family: sans-serif;
-}
-
-h2 {
-  text-align: center;
-  padding-bottom: 20px;
-  font-size: 1.2rem;
-  font-family: serif;
-}
-
-h3 {
-  font-size: 1.2rem;
-  text-align: left;
-}
-
-p {
-  margin: 0 5%;
-  padding-bottom: 40px;
-}
-
-img {
-  width: 90%;
-  padding: 0 0 40px 0;
-  margin: 0 5%;
-}
-
-.scrollable {
-  overflow: hidden;
+canvas {
+  max-width: 600px;
+  max-height: 300px;
 }
